--- a/DOMJQuery.html
+++ b/DOMJQuery.html
@@ -4,21 +4,39 @@
       <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
       <style>
       *{font-family: 'Open Sans', sans-serif;}
+      #js-hovered {
+  background-color: blue;
+  width: 7rem;
+  height: 7rem;
+}
+.tooltip-wrapper {
+  position: relative;
+}
+
+.tooltip {
+  display: none;
+  position: absolute;
+  bottom: 0;
+  background-color: rgba(0,0,0,.7);
+  color: #fff;
+  opacity: 1;
+  transform: translateY(100%);
+}
       </style>
     <meta charset="utf-8" />
     <title>DOM JQuery</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-        <h1>Some title</h1>
+        <button id="js-btn" class="btn btn-secondary">Button</button>
 
-        <article id="js-article">
-          <h2>Article title</h2>
-          <p>Article content</p>
-        </article>
+        <div id="js-hovered"></div>
 
-        <input type="text" id="js-search" placeholder="Search something..." value="Poodles">
+        <p class="tooltip-wrapper" id="js-tooltip-wrapper">
+                <span class="tooltip" id="js-tooltip">En informatique, un langage de programmation est une notation conventionnelle destinée à formuler des algorithmes et produire des programmes informatiques qui les appliquent.</span>
+                JavaScript est un langage de programmation de scripts principalement employé dans les pages web interactives mais aussi pour les serveurs avec l'utilisation (par exemple) de Node.js.
+              </p>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js%22%3E</script>
-    <script src="DOMJQuery.js"></script>
+    <script src="event.js"></script>
 </body>
-</html>
